--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -26,10 +26,6 @@
                 padding: 80px $gutter;
                 align-items: inherit;
             }
-
-            .content {
-
-            }
         }
 
         &.has-container {
@@ -40,6 +36,10 @@
                 padding: 0 !important;
             }
 
+            @include breakpoint(max-height 400px) {
+                padding: 0 50px;
+            }
+
             > .inner {
                 position: relative;
                 width: 100%;
@@ -47,17 +47,48 @@
                 background: rgba(255,255,255,0.90);
                 visibility: hidden;
                 overflow: hidden;
+
                 &.vimeo {
                     background: transparent;
+                    top: 50%;
+                    overflow: visible;
+                    padding-bottom: 56.25%; /* 16:9 */
+                    padding-top: 0;
+                    height: 0;
+                    width: inherit;
+
+                    @include breakpoint($break-620) {
+                        padding-left: $gutter;
+                        padding-right: $gutter;
+                    }
 
                     iframe {
+                        position: absolute;
+                        //transform: translateY(-50%);
+                        top: 0;
+                        left: 0;
                         width: 100%;
-                        height: 90%;
+                        height: 100%;
                     }
                 }
             }
         }
     }
+}
+
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .module-title {
@@ -144,13 +175,32 @@
     visibility: hidden;
     border: 0;
     transform-origin: 50% 50%;
+    transition: bottom 100ms ease-in-out;
 
     svg {
         width: 100%;
         height: 100%;
-        path {
+
+        path.arrow {
             fill: white;
-            transition: fill 0.3s ease;
+            transform: scale(1);
+            transform-origin: 50% 50%;
+            transition: all 0.3s ease;
+        }
+
+        path.circle {
+            fill: white;
+            transition: fill 0.3s ease, opacity 0.3s ease;
+            opacity: 1;
+        }
+
+        &:hover {
+            path.arrow {
+                transform: scale(1.2);
+            }
+            path.circle {
+                opacity: 0.1;
+            }
         }
     }
 }
