--- a/resources/assets/scss/pages/home/_question-nav.scss
+++ b/resources/assets/scss/pages/home/_question-nav.scss
@@ -1,91 +1,93 @@
 $radius: 5px;
 .question-nav ul {
-	position: relative;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	cursor: default;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    cursor: default;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 100;
 }
 
 .question-nav li {
-	position: relative;
-	display: block;
-	margin: 8px 0px;
-	width: $radius * 2;
-	height: $radius * 2;
-	cursor: pointer;
-	opacity: 0.8;
+    position: relative;
+    display: block;
+    margin: 8px 0px;
+    width: $radius * 2;
+    height: $radius * 2;
+    cursor: pointer;
+    opacity: 0.8;
 }
 
 .question-nav li a {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	outline: none;
-	border-radius: 50%;
-	background-color: $lightRed;
-	text-indent: -999em; /* make the text accessible to screen readers */
-	cursor: pointer;
-	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border-radius: 50%;
+    background-color: #CCCCCC;
+    text-indent: -999em; /* make the text accessible to screen readers */
+    cursor: pointer;
+    position: absolute;
 }
 
 .question-nav li a:focus {
-	outline: none;
+    outline: none;
 }
 
 .question-nav li:last-child {
-	position: absolute;
-	left: 0;
-	top: 0;
-	margin: 0 ;
-	height: 18px;
-	-webkit-transition: -webkit-transform 0.3s ease;
-	transition: transform 0.3s ease;
-	opacity: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0 ;
+    height: 18px;
+    -webkit-transition: -webkit-transform 0.3s ease;
+    transition: transform 0.3s ease;
+    opacity: 1;
 }
 
 .question-nav li:last-child::after {
-	content: '';
-	position: absolute;
-	top: -1px;
-	width: $radius * 2 + 2px;
-	height: $radius * 2 + 2px;
-	border-radius: 50%;
-	background: $lightRed;
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
+    content: '';
+    position: absolute;
+    top: -1px;
+    width: $radius * 2 + 2px;
+    height: $radius * 2 + 2px;
+    border-radius: 50%;
+    background: $lightRed;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    border: 2px solid $lightRed;
 }
 
 .question-nav li.is-active:first-child ~ li:last-child {
-	transform: translateY(0%);
+    transform: translateY(0%);
 }
 
 .question-nav li.is-active:nth-child(2) ~ li:last-child {
-	transform: translateY(100%);
+    transform: translateY(100%);
 }
 
 .question-nav li.is-active:nth-child(3) ~ li:last-child {
-	transform: translateY(200%);
+    transform: translateY(200%);
 }
 
 .question-nav li.is-active:nth-child(4) ~ li:last-child {
-	transform: translateY(300%);
+    transform: translateY(300%);
 }
 
 .question-nav li.is-active:nth-child(5) ~ li:last-child {
-	transform: translateY(400%);
+    transform: translateY(400%);
 }
 
 .question-nav li.is-active:nth-child(6) ~ li:last-child {
-	transform: translateY(500%);
+    transform: translateY(500%);
 }
 
 
