--- a/resources/assets/scss/pages/home/_questions.scss
+++ b/resources/assets/scss/pages/home/_questions.scss
@@ -14,12 +14,15 @@
         align-items: center;
         justify-content: center;
 
+        >.content {
+            max-width: 445px;
+            width: 100%;
+            padding: 0 $gutter;
 
-        .content {
             form {
-                position:relative;
-                display:inline-block;
-
+                position: relative;
+                display: inline-block;
+                width: 100%;
             }
 
             p {
@@ -104,11 +107,11 @@
 
 
         .next-question {
+            position: absolute;
             display:block;
             width: 50px;
             height: 50px;
-            position:absolute;
-            bottom: 60px;
+            bottom: 20px; //was initally 60px from bottom.
             left: 50%;
             margin-left: -25px;
             opacity: 1;
@@ -143,7 +146,7 @@
 
         @include breakpoint($break-620) {
             right: inherit;
-            left: 15px;
+            right: 5px;
         }
     }
     &.question-0 {
