--- a/resources/assets/scss/ui/_buttons.scss
+++ b/resources/assets/scss/ui/_buttons.scss
@@ -23,6 +23,7 @@ button.button {
     transition: background-color 0.2s ease, color 0.2s ease;
     font-size: 15px;
     border: 0;
+    margin-bottom: 20px;
     @extend %brandon-grotesque;
 
 
